Switch to Arezoo's logic for rendering nodes and links. Fix text size in tooltips. Fix alignment of scatterplot matrix.

--- a/visualization/css/viz-style.css
+++ b/visualization/css/viz-style.css
@@ -112,10 +112,10 @@ svg {
 
 #svgDiv {
     /*width: 800px;*/
-    width: 70%;
+    /*width: 70%;*/
     overflow: auto;
     /*height: 800px;*/
-    height: 99%; /* 99% to avoid scroll bar for whole page */
+    /*height: 99%; !* 99% to avoid scroll bar for whole page *!*/
     /* float: right; */
     display: inline-block;
     padding: 0% 5% 0% 5%;
